# wofi-pubs

./: Makefile  README.md  Readme.md  parse-bib-file  pubs-utils  pubs_to_dptrp1  pyproject.toml  update_pdf_meta  wofi-pubs  wofi-pubs.py
contrib/: make_writable  wofi-pubs.service
src/wofi_pubs/: email.py  rofi.py  update_metadata.py  wofi_pubs.py
wofi_pubs/: __init__.py  dialogs.py  print_to_dpt.py  rofi_pubs.py  update_metadata.py  wofi_pubs.py  wofi_pubs_server.py
