[tool.poetry]
name = "wofi-pubs"
version = "0.9.1"
description = "A wofi interface for the reference manager pubs"
authors = ["Cristóbal Tapia Camú <crtapia@gmail.com>"]
license = "MIT"
readme = "Readme.md"
homepage = "https://github.com/cristobaltapia/wofi-pubs"
repository = "https://github.com/cristobaltapia/wofi-pubs"
keywords = ["wofi", "pubs"]

[tool.poetry.dependencies]
python = "^3.6"
pubs = ">=0.9.0"
python-wofi = "^0.3.0"
PyGObject = "^3.36.1"
dpt-rp1-py = "^0.1.11"
bibtexparser = "^1.4.0"

[tool.poetry.dev-dependencies]
isort = "^5.2.2"
yapf = "^0.30.0"
pydocstyle = "^5.0.2"

[tool.poetry.scripts]
wofi-pubs = "wofi_pubs.wofi_pubs:main"
wofi-pubs-server = "wofi_pubs.wofi_pubs_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
path = "venv"

