[project]
name = "wofi-pubs"
version = "0.10.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cristóbal Tapia Camú", email = "crtapia@gmail.com" }
]
requires-python = ">=3.11.3"
dependencies = [
    "bibtexparser>=1.4.3",
    "dpt-rp1-py>=0.1.18",
    "pubs>=0.9.0",
    "pygobject>=3.54.5",
    "python-wofi>=0.3.1",
]

[project.scripts]
wofi-pubs = "wofi_pubs.wofi_pubs:main"
rofi-pubs = "wofi_pubs.rofi_pubs:main"
wofi-pubs-server = "wofi_pubs.wofi_pubs_server:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
